Uploaded image for project: 'Qt Solutions'
  1. Qt Solutions
  2. QTSOLBUG-102

QtSingleApplication compilation failure: getuid not declared

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • None
    • Some Release
    • Single Application
    • None
    • fb7bc42bfcc578ff3fa3b9ca21a41e96eb37c1c7

      Trying to compile the solution results in:

      src/qtlocalpeer.cpp: In constructor 'QtLocalPeer::QtLocalPeer(QObject*, const QString&)':
      src/qtlocalpeer.cpp:103: error: '::getuid' has not been declared
      

      The solution is to add #Include <unistd.h> to qtlocalpeer.cpp. See the attached patch.

        1. qtlocalpeer.diff
          0.4 kB
          Thiago Macieira (closed Nokia identity)
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            tmacieir Thiago Macieira (closed Nokia identity) (Inactive)
            Votes:
            3 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes