Fix '::getuid' has not been declared compile error

Task-number: QTSOLBUG-102

Change-Id: Idd30a013e4b1d113531e2a90c4b15924ca005788
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>